@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-09-04T01:41:03Z",
+  "timestamp" : "2022-09-04T16:20:27Z",
   "count_outdated" : 494,
   "uniques_outdated" : 286,
-  "count" : 525,
-  "uniques" : 304,
+  "count" : 524,
+  "uniques" : 303,
   "clones" : [
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
