@@ -1,11 +1,11 @@
 {
-  "count": 31,
+  "count": 30,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-22T00:00:00Z",
